--- a/style.css
+++ b/style.css
@@ -1,110 +1,256 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,900&display=swap');
-*{
-    margin:0px;
-    padding:0px;
-    box-sizing:border-box;
-    font-family: 'Roboto', sans-serif;
+* {
+   margin :0;
+   font-family: Arial; 
+   border: border-box;
+}
+.navbar {
+    height: 60px;
+    background-color: #0f1111;
+    color: white;
+    display: flex;
     
+    align-items: center;
+    justify-content: space-evenly;
 }
-section{
-    min-height:100vh;
-    background-image: url("../image/image.jpg");
-    background-repeat:no-repeat;
-    background-size: cover;
+.nav-logo{
+    height: 50px;
+    width: 100px;
 }
-.container{
-    width:90%;
-    margin:auto;
+.logo{
+    background-image: url("amazon_logo.png");
+    background-size:cover ;
+    height: 50px;
+    width: 100%;
 }
-nav{
-    height:80px;
-    
+.border {
+    border:1.5px solid transparent ;
 }
-nav h1{
-    float:left;
-    line-height:80px;
-    font-size: 35px;
-    font-size:inline;
-    color:black;
+.border:hover {
+    border:1.5px solid white
 }
-nav ul{
-    float: right;
-    line-height: 80px;
+/* box2 */
+.add-first {
+    color:#cccccc;
+    font-size: 0.85rem;
+    margin-left: 15px;
+}
+.add-second {
+    font-size: 1rem;
+    margin-left: 3px;
 
 }
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    padding:0px 5px;
+.add-icon{
+    display: flex;
+    align-items: center;
+
 }
-nav ul li a{
-    color:black;
-    background:#fff;
-    text-decoration: none;
-    font-weight:500;
-    letter-spacing:1px;
-    border-radius: 20px;
-    padding:7px 15px;
-   
+/* box3 */
+.nav-search {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: pink;
+    width: 620px;
+    height: 40px ;
+    border-radius: 4px;
 }
-nav ul li a:hover{
-    background-color: #20eb56;
-    transition: 0.5s ease;
+.search-select{
+    background-color:#f3f3f3 ;
+    width:50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
 }
-nav ul li .active{
-    background-color: #20eb56;
+.search-input {
+    width:100%;
+    font-size: 1rem;
+    border: none;
 }
-.article{
-    width:50%;
-    line-height:10px;
-    margin:auto;
-    text-align:center;
-    transform:translateY(25vh);
-}
-.article h2{
-    font-size: 36px;
-    color:#226A80;
-    letter-spacing: 1.5px;
-    font-weight: 800;
-    margin-bottom: 25px;
-}
-.article p{
-    font-size: 18px;
-    color:#1c1c1c;
-    line-height: 1.5;
-    margin-bottom: 50px;
-}
-.article .info-btn{
-    color:#fff;
-    background: #226A80;
-    text-decoration:none;
-    text-transform: uppercase;
-    font-weight:700;
-    letter-spacing: 2px;
-    padding: 10px 20px;
-}
-.article .info-btn:hover{
-    background: #0C4F60;
-}
-.media-icons{
+.search-icon {
+    width: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin:auto;
+    font-size: 1.3rem;
+    background-color: #febd68;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0f1111;
+}
+.nav-search:hover{
+    border: 2px solid orange;
 }
 
-.media-icons a{
-    position:relative;
-    top:500px;
-    bottom:60px;
-    color:#111;
-    font-size:25px;
-    transition:0.3s;
-    transition-property:transform;
+/* box4 */
+span {
+    font-size: 0.7rem;
 }
-.media-icons :not(:last-child){
-    margin-right:60px;
+.nav-second {
+    font-size: 0.85rem;
+    font-weight: 700;
 }
-.media-icons a:hover{
-    transform: scale(1.5)
+
+/* box6 */
+.nav-cart i {
+    font-size: 30px;
+}
+
+.nav-cart{
+    font-size: 0.85rem;
+    font-weight:700;
+}
+
+/* panel */
+.panel {
+    height: 40px;
+    background-color: #222f3d;
+    display:flex;
+    color:white;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.panel-ops p {
+    display: inline;
+    margin-left: 15px;
+}
+
+.panel-ops {
+    width:70%;
+    font-size: 0.85rem;
+}
+
+.panel-deals {
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+
+/* hero section */
+.hero-section {
+    background-image: url("hero_image.jpg");
+    height:350px;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-msg {
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    width:80%;
+    margin-bottom: 25px;
+}
+.hero-msg a {
+    color:#007185
+}
+
+/* shop-section */
+.shop-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+
+}
+
+.box {
+    /* border:2px solid black; */
+    height: 400px;
+    width: 23%;
+    background-color: white;
+    padding:20px 0px 15px;
+    margin-top: 15px;
+}
+
+.box-img {
+    height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+}
+
+.box-content {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.box-content p {
+    color:#007185
+}
+
+/* footer */
+footer {
+    margin-top: 15px;
+}
+
+.foot-panel1 {
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+
+}
+
+.foot-panel2 {
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+ul{
+    margin-top: 20px;
+}
+
+ul a {
+    display:block;
+    font-size: 0.85rem;
+    margin-top:10px;
+    color: #dddddd;
+}
+
+.foot-panel3 {
+    background-color: #222f3d;
+    color:white;
+    border-top: 0.5px solid white;
+    height:70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    background-image: url("amazon_logo.png");
+    background-size:cover ;
+    height: 50px;
+    width: 100%;
+}
+
+.foot-panel4 {
+    background-color:#0f1111;
+    color:white;
+   height: 80px;
+   font-size:0.7rem;
+   text-align: center;
+}
+
+.pages {
+    padding-top: 25px;
+}
+
+.copyright {
+    padding-top:5px;
 }
